Fix sizing and alignment for mobile devices, break it for desktops

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,25 @@
 .game {
-   padding: 200px;
+   position: relative;
+   left: 15%;
+   padding-top: 15%;
 }
 
 .controls {
-   position: absolute;
+   position: relative;
 }
 
 .pad {
-   width: 300px;
-   height: 300px;
-   position: absolute;
-   left: 50px;
-   top: 10px;
+   height: 200px;
+   position: relative;
+   left: 11%;
+   margin-top: 15%;
 }
 
 .button {
-   height: 40px;
-   width: 40px;
+   height: 60px;
+   width: 60px;
    font-weight: bold;
-   line-height: 40px;
+   line-height: 60px;
    position: absolute;
    border: none;
    border-radius: 3px;
@@ -30,23 +31,23 @@
 }
 
 .button--left {
-   top: 40px;
+   top: 60px;
    left: 0px;
 }
 
 .button--right {
-   top: 40px;
-   left: 80px;
+   top: 60px;
+   left: 120px;
 }
 
 .button--up {
    top: 0px;
-   left: 40px;
+   left: 60px;
 }
 
 .button--down {
-   top: 80px;
-   left: 40px;
+   top: 120px;
+   left: 60px;
 }
 
 .scoreboard {
@@ -57,9 +58,9 @@
 
 .box {
    border: 1px solid #555;
-   width: 50px;
-   height: 50px;
-   line-height: 50px;
+   width: 60px;
+   height: 60px;
+   line-height: 60px;
    text-align: center;
 }
 
